[gd_scene load_steps=15 format=3 uid="uid://c7nrodavymulj"]

[ext_resource type="Texture2D" uid="uid://dikgmsylwt2ns" path="res://Assets/Terrain/Area1/boss_door.png" id="1_0nfto"]
[ext_resource type="Script" path="res://scripts/misc/boss_door.gd" id="1_7nnfd"]
[ext_resource type="Script" path="res://scripts/misc/bossdoorStatemachine.gd" id="3_pne70"]
[ext_resource type="Script" path="res://scripts/misc/bossdoor_hidden.gd" id="4_wk4n4"]
[ext_resource type="Script" path="res://scripts/misc/bossdoor_materialize.gd" id="5_y3wkf"]
[ext_resource type="Script" path="res://scripts/misc/bossdoor_active.gd" id="6_uej8o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bqr4j"]
size = Vector2(32, 80)

[sub_resource type="Animation" id="Animation_g6y85"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_aat53"]
resource_name = "materialize"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("bossdoorStatemachine/bossdoor_materialize")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_end"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bgapt"]
resource_name = "pulse"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1au4s"]
resource_name = "unactive"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pxglx"]
_data = {
"RESET": SubResource("Animation_g6y85"),
"materialize": SubResource("Animation_aat53"),
"pulse": SubResource("Animation_bgapt"),
"unactive": SubResource("Animation_1au4s")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d77ma"]
size = Vector2(324, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qkqti"]
size = Vector2(36, 73)

[node name="door_body" type="CharacterBody2D"]
script = ExtResource("1_7nnfd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-8, 8)
shape = SubResource("RectangleShape2D_bqr4j")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_0nfto")
hframes = 5
vframes = 2
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pxglx")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(167, 82)
shape = SubResource("RectangleShape2D_d77ma")

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(-8, 8)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(72, 0)
shape = SubResource("RectangleShape2D_qkqti")

[node name="bossdoorStatemachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "bossdoor")]
script = ExtResource("3_pne70")
initial_state = NodePath("bossdoor_hidden")
bossdoor = NodePath("..")

[node name="bossdoor_hidden" type="Node" parent="bossdoorStatemachine"]
script = ExtResource("4_wk4n4")

[node name="bossdoor_materialize" type="Node" parent="bossdoorStatemachine"]
script = ExtResource("5_y3wkf")

[node name="bossdoor_active" type="Node" parent="bossdoorStatemachine"]
script = ExtResource("6_uej8o")

[connection signal="body_entered" from="Area2D" to="bossdoorStatemachine/bossdoor_hidden" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="bossdoorStatemachine/bossdoor_hidden" method="_on_area_2d_2_body_entered"]
